<?xml version="1.0"?>
<package format="3">
  <name>gazebo_ros_2d_map</name>
  <version>0.1.0</version>
  <description>Gazebo simulator plugin to automatically generate a 2D occupancy map from the simulated world at a given height using wavefront exploration.</description>

  <maintainer email="d.bensoussan@proton.me">David Bensoussan</maintainer>
  <license>MPL-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>gz-math6</depend>
  <depend>libgazebo-dev</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>nav2_costmap_2d</depend>

  <exec_depend>nav2_map_server</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
